--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -56,7 +56,7 @@ additional_equipment:
 coffee:
   title: Kaffee
   text: >
-    Morgens zum Wachwerden oder für den entspannten Nachmittags-Kaffe mit Blick auf die Berge
+    Morgens zum Wachwerden oder für den entspannten Nachmittags-Kaffee mit Blick auf die Berge
     steht euch in der Küche eine Kaffee-Pad-Machine zur Verfügung. Und wenn ihr euren Kaffee nicht schwarz mögt,
     so holt euch einfach eine frische Milch von der Kühen aus der Region in der Molkerei im Ort.
 contact:
@@ -138,7 +138,7 @@ laundry:
   text1: >
     Im Haus steht euch eine Waschmaschine und ein Trockner gegen Gebühr zur Verfügung. Waschmittel und die Chip-Karte zur Nutzung
     der Geräte findet ihr im linken Schrank im großen Schlafzimmer. Bitte werft für jeden 
-    Wasch-/Trockengang 5 CHF in die "Wäschkasse", die auch im Schrank steht (oder sagt uns Bescheid, wenn
+    Wasch-/Trockengang 5 CHF in die "Wäschekasse", die auch im Schrank steht (oder sagt uns Bescheid, wenn
     ihr über Paypal/Überweisung bezahlen wollt).
   text2: >
     Die Waschküche findet ihr im Keller. Am Ende vom Treppenhaus links durch die Tür und gleich wieder links.
