--- a/src/lang/de/contact.yaml
+++ b/src/lang/de/contact.yaml
@@ -5,7 +5,7 @@ meta:
     Fragen zu Region hast.
 header:
   title: Kontaktiere uns
-  subtitle: Wir vermieten unsere Chalet-Wohnung gerne an euch
+  subtitle: Wir beantworte gerne eure Fragen
 form:
   name:
     label: Name
