--- a/src/lang/de/index.yaml
+++ b/src/lang/de/index.yaml
@@ -72,7 +72,7 @@ kitchen:
   text1: >-
     Die Küche der Wohnung ist mit allem ausgestattet, was man zum Kochen
     braucht. Herd, Kühlschrank, Küchengeräte, etc. ist ist alles vorhanden. 
-    Und auch die wichtigsten Gewürze hast immer zu Hand.
+    Und auch die wichtigsten Gewürze hast du immer zu Hand.
   text2: >-
     Zudem bieten wir euch kostenlosen Kaffee aus der Senseo-Maschine an. Was wir
     euch als lecker Süßigkeit vom Bäcker dazu empfehlen können findet ihr <a href="recommendations.html">hier</a>.
