--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -47,7 +47,7 @@ guest_card:
     verfügbar.
   text2: >-
     Alles Informationen zur Gstaad Card findet ihr unter <a
-    href="https://www.gstaad.ch/aktuell/angebote/gstaad-card">gstaad.ch/aktuell/angebote/gstaad-card</a>.
+    href="https://www.gstaad.ch/aktuell/gstaad-card">gstaad.ch/aktuell/gstaad-card</a>.
 
     Da die Gstaad Card personalisiert ist, benötigen wir zur Austellung pro
     Person folgende Informationen von euch: <ul><li>Vor- und
