--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -50,7 +50,7 @@ guest_card:
     The Gstaad Card is currently only available in summer.
   text2: >-
     You can find all information about the Gstaad Card at <a
-    href="https://www.gstaad.ch/en/news/offers/gstaad-card">gstaad.ch/en/news/offers/gstaad-card</a>.
+    href="https://www.gstaad.ch/en/news/gstaad-card">gstaad.ch/en/news/gstaad-card</a>.
     Since the Gstaad Card is personalized, we need the following information
     from you per person: <ul> <li> First and last name </li> <li> Date of birth
     </li> <li> Address (street, house number, postcode, city, country) </li>
