--- a/src/lang/de/nav.yaml
+++ b/src/lang/de/nav.yaml
@@ -4,4 +4,5 @@ contact: Kontakt
 language: 🇩🇪 Sprache
 activities: Aktivitäten
 paragliding: Paragliding
+skiing: Ski fahren
 recommendations: Empfehlungen
