--- a/src/lang/en/nav.yaml
+++ b/src/lang/en/nav.yaml
@@ -4,4 +4,5 @@ contact: Contact
 language: 🇬🇧 Language
 activities: Activities
 paragliding: Paragliding
+skiing: Skiing
 recommendations: Recommendations
