--- a/src/lang/de/info.yaml
+++ b/src/lang/de/info.yaml
@@ -105,8 +105,9 @@ parking:
 keys:
   title: Schlüssel
   text1: >
-    Den Schlüssel findet ihr im Schlüsselsafe rechts neben dem Hauseingang
-    (Marke EMIUP).  Den Code erhaltet ihr nach eurer Buchung über AirBnB. 
+    Den Schlüssel findet ihr im Schlüsselsafe, welcher sich im Paket-Fach des 
+    Briefkastens mit dem Namen "Seyer" direkt vor dem Haus befindet.
+    Den Code erhaltet ihr nach eurer Buchung über AirBnB. 
   text2: >
     Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie
     den Skiraum. Wenn ihr abreist, lasst den Schlüssel bitte unbedingt im Safe
