--- a/src/lang/en/info.yaml
+++ b/src/lang/en/info.yaml
@@ -108,7 +108,8 @@ parking:
 keys:
   title: Key
   text1: >
-    You will find the key in the key safe next to the entrance (EMIUP brand). 
+    You will find the key in the key safe, which is located in the parcel compartment 
+    of the mailbox with the name "Seyer" directly in front of the building. 
     You will receive the code after your booking through AirBnB. 
   text2: >
     The key locks the house and flat doors, the garage door and the ski room.
